# dy-rs

./: .gitignore  AGENTS-zh.md  AGENTS.md  AUTH-zh.md  AUTH.md  CHANGELOG-zh.md  CHANGELOG.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  QUICK_START-zh.md  QUICK_START.md  README-zh.md  README.md
dy-rs/: Cargo.toml
dy-rs-cli/: Cargo.toml
dy-rs-cli/src/: main.rs  templates.rs
dy-rs-cli/src/commands/: dev.rs  mod.rs  new.rs
dy-rs-macros/: Cargo.toml
dy-rs-macros/src/: lib.rs
dy-rs/src/: app.rs  config.rs  database.rs  error.rs  extractors.rs  lib.rs  openapi.rs  prelude.rs
dy-rs/src/auth/: config.rs  extractors.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  password.rs
dy-rs/src/middleware/: mod.rs  request_id.rs
examples/auth-api/: Cargo.toml
examples/auth-api/src/: main.rs
examples/rest-api/: Cargo.toml
examples/rest-api/src/: main.rs
