[package]
name = "auth-api-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dy-rs = { path = "../../dy-rs", features = ["auth"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
utoipa.workspace = true
axum.workspace = true
